[gd_scene load_steps=12 format=2]

[ext_resource path="res://homebutton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/buttonicons/house.png" type="Texture" id=2]
[ext_resource path="res://Levels.gd" type="Script" id=3]
[ext_resource path="res://tres_files/levels_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/font/Galindo-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://tres_files/settings_font.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 38
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 36
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.5
margin_top = 164.0
margin_right = 181.5
margin_bottom = 259.0
rect_scale = Vector2( 0.971021, 1.12605 )
custom_fonts/font = ExtResource( 4 )
text = "Choose difficulty level"

[node name="easy_button" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.0980392, 0.470588, 0.0235294, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -93.0
margin_right = 44.0
margin_bottom = -35.0
rect_scale = Vector2( 1.24305, 1.10907 )
custom_colors/font_color_hover = Color( 0.0352941, 0.443137, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.231373, 0.815686, 0.105882, 1 )
custom_fonts/font = SubResource( 1 )

[node name="medium_button" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 0.945098, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 1.0
margin_right = 100.0
margin_bottom = 78.0
rect_scale = Vector2( 1, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.4, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 0.607843, 0.627451, 0.0901961, 1 )
custom_fonts/font = SubResource( 2 )
text = "MEDIUM"

[node name="hard__button" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 93.0
margin_right = 66.0
margin_bottom = 161.0
rect_scale = Vector2( 1, 1 )
custom_colors/font_color_hover = Color( 0.631373, 0.0627451, 0.0784314, 1 )
custom_colors/font_color_pressed = Color( 0.890196, 0.0352941, 0.0509804, 1 )
custom_fonts/font = SubResource( 3 )
text = "HARD"

[node name="back_button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.0
margin_top = 50.0
margin_right = -194.0
margin_bottom = 90.0
rect_scale = Vector2( 1.58924, 1.55083 )
expand = true

[node name="TextureRect" type="TextureRect" parent="back_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -18.6594
margin_right = 20.0
margin_bottom = 21.3406
rect_scale = Vector2( 0.971698, 0.954649 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="about_level" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -158.0
margin_right = 197.0
margin_bottom = 168.0

[node name="ColorRect" type="ColorRect" parent="about_level"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.643137, 0.176471, 0.176471, 1 )

[node name="Label2" type="Label" parent="about_level"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.0
margin_top = 44.0
margin_right = 138.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
autowrap = true

[node name="Button" type="Button" parent="about_level"]
material = SubResource( 5 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.5
margin_top = -60.0
margin_right = 40.5
margin_bottom = -8.0
custom_colors/font_color = Color( 0.976471, 0.937255, 0.937255, 1 )
custom_fonts/font = ExtResource( 6 )
text = "OK"

[connection signal="pressed" from="easy_button" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="medium_button" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="hard__button" to="." method="_on_hard__button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="about_level/Button" to="." method="_on_Button_pressed"]
